# ai-assistant

./: .gitignore  README.md  pyproject.toml  run_streamlit_assistant.py
data/: coffee.txt  coffee_bar_product_list.csv
openai_assistant/: run_assistant.py  run_coffee_assistant.py  run_coffee_indexer.py  run_coffee_user.py  run_product_generator.py
openai_assistant/assistant/: __init__.py  assistant.py  assistant_functions.py  file.py  thread.py
openai_assistant/coffee/: __init__.py  tools.py
openai_assistant/files/: __init__.py
openai_assistant/store/: __init__.py  access_weaviate.py  coffee_collection.py
openai_assistant/thread/: __init__.py  thread.py
tests/: test_coffee_weaviate.py
